<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mKino</string>
    <string name="action_settings">Postavke</string>
    
    
    <!-- activity_pocetna -->
    <string name="pocetni_logo">Logo aplikacije</string>
    <string name="pocetni_btnMapa">Gumb za mapu</string>
    <string name="pocetna_btnMojeRezervacije">Moje rezervacije gumb</string>
    <string name="pocetna_brnRezerviraj">Gumb za rezerviranje</string>
    <string name="pocetna_btnAktualno">Gumb za prikaz aktualnih filmova</string>
        
    
    <!-- activity_aktualno -->
    <string name="grad_label">Grad:</string>
    <string name="trazilica_label">Tražilica:</string>
    
    
    <!-- activity_detalji_filma -->
    <string name="slika_filma">Slika filma</string>
    <string name="detalji_filma_lblTrajanje">Trajanje:</string>
    <string name="detalji_filma_lblZanr">Žanr:</string>
    <string name="detalji_filma_lblRedatelj">Redatelj:</string>
    <string name="detalji_filma_lblGlumci">Uloge:</string>
    <string name="detalji_filma_lblDetalji">Detalji:</string>
    
    <string name="tmp_naslov_filma">Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb</string>
    <string name="tmp_trajanje_filma">90min</string>
    <string name="tmp_zanr_filma">Drama</string>
    <string name="tmp_redatelj_filma">Redatelj1</string>
    <string name="tmp_glumci_filma">Glumac1, Glumac2, Glumac3, Glumac4, Glumac5</string>
    <string name="tmp_detalji_filma">Paranoid Brigadier General Jack D. Ripper of Burpelson Air Force Base, he believing that fluoridation of the American water supply is a Soviet plot to poison the U.S. populace, is able to deploy through a back door mechanism a nuclear attack on the Soviet Union without the knowledge of his superiors, including the Chair of the Joint Chiefs of Staff, General Buck Turgidson, and President Merkin Muffley. Only Ripper knows the code to recall the B-52 bombers and he has shut down communication in and out of Burpelson as a measure to protect this attack. Ripper\'s executive officer, RAF Group Captain Lionel Mandrake (on exchange from Britain), who is being held at Burpelson by Ripper, believes he knows the recall codes if he can only get a message to the outside world. Meanwhile at the Pentagon War Room, key persons including Muffley, Turgidson and nuclear scientist and adviser, a former Nazi named Dr. Strangelove, are discussing measures to stop the attack or mitigate its blow-up into an</string>
    <string name="tmp_dvorana_projekcije">Dvorana 6</string>
    <string name="tmp_vrijeme_pocetka_projekcije">15:30</string>
    
    
    <!-- activity_moja_mapa -->
    <string name="tmp_pozicija_mape">Tu ide mapa</string>
    <string name="odaberite_multipleks_lbl">Odaberite multipleks:</string>
    <string name="odabir_najblizeg_multipleksa">Odaberi najbliži multipleks</string>
    <string-array name="lista_multipleksa">
        <item >Zagreb</item>
        <item >Rijeka</item>
        <item >Zadar</item>
        <item >Šibenik</item>
        <item >Split</item>
        <item >Osijek</item>
        <item >Varaždin</item>
        <item >Dubrovnik</item>
    </string-array>
    
    <!-- acitvity_rezervacije -->
    <string name="rezevacije_grad">Grad:</string>
    <string name="rezervacije_datum">Datum:</string>
    <string name="rezervacije_vrijeme">Vrijeme:</string>
    <string name="lbl_rezervacije_dvorana">Dvorana:</string>
    <string name="rezervacije_rezerviraj">Rezerviraj!</string>
    <string name="rezervirana_sjedala">Odaberite željena sjedala!</string>
    <string name="lbl_rezervirana_sjedala">Sjedala:</string>
    <string name="lbl_vrijeme_projekcije">Vrijeme:</string>
    <string name="btn_mapa_sjedala">Mapa sjedala</string>
     <string-array name="dani_u_tjednu">
        <item >Ponedjeljak</item>
        <item >Utorak</item>
        <item >Srijeda</item>
        <item >Četvrtak</item>
        <item >Petak</item>
        <item >Subota</item>
        <item >Nedjelja</item>
    </string-array>
    <string name="rezervacija_nije_moguce_rezervirati">Nije moguće rezervirati sjedala!</string>
    <string name="rezervacija_odaberite_sjedala">Odaberite sjedala!</string>
    <string name="rezervacija_pogreska_kod_registracije">Dogodila se pogreška prilikom registracije! Molimo vas za strpljenje i pokušajte ponovno!</string> 
    <string name="rezervacija_shvacam">Shvaćam!</string>
    <string name="rezervacija_uspjesna">Uspješno ste rezervirali ulaznice!</string>
    <string name="rezervacija_nastavi">Nastavi</string>
    <string name="cijena">Cijena:</string>
    
    <!-- dijalog_mapa_sjedala -->
    <string name="dijalog_mapa_sjedala_description">Mapa sjedala kino dvorane</string>

     <!-- dijalog_odabir_sjedala -->
    <string name="odabir_sjedala_btn_odustani">Odustani</string>
    <string name="odabir_sjedala_btn_resetiraj">Resetiraj</string>
    <string name="odabir_sjedala_btn_prihvati">Prihvati</string>
    <string name="odabir_sjedala_txt_odaberi_sjedalo">Odaberi sjedalo!</string>
      
    <!-- dijalog_prijava -->
    <string name="prijava_prijavi_se">Prijavi se!</string>
    <string name="prijava_odustani">Odustani!</string>
    <string name="prijava_korisnicko_ime">Korisničko ime:</string>
    <string name="prijava_lozinka">Lozinka:</string>
    <string name="prijava_registriraj_se">Ukoliko nemate korisnički račun molimo Vas da se registrirate.</string>
    <string name="prijava_registriracija">Registracija!</string>
    
    <!-- dijalog_registracija -->
    <string name="registracija_registriraj_se">Registriraj se!</string>
    <string name="registracija_odustani">Odustani!</string>
    <string name="registracija_ime">Ime:</string>
    <string name="registracija_prezime">Prezime:</string>
    <string name="registracija_email">E-mail:</string>
    <string name="registracija_telefon">Telefon:</string>
    <string name="registracija_korisnicko_ime">Korisničko ime:</string>
    <string name="registracija_lozinka">Lozinka:</string>
    <string name="registracija_ponovljena_lozinka">Ponovljena lozinka:</string>
    
    <!--  menu_pocetna -->
    <string name="menu_prijava">Prijavi se</string>
    <string name="menu_odjava">Odjavi se</string>
    <string name="menu_titleGrupaMojRacun">Moj račun</string>
    
    <!-- stavka_filma -->
    <string name="slika_filma_mala">Mala slika filma</string>
    <string name="naziv_filma_mali_lbl">Naslov:</string>
    <string name="uloge_male_lbl">Glumci:</string>
    
    <!-- moje_rezervacije -->
    <string name="moje_rezervacije_prijavite_se">Prijavite se za pregled vlastitih rezervacija</string>
    <string name="ucitavam">Učitavam.. .</string>
     <string name="moje_rezervacije_obrisi">Želite li obrisati rezervaciju?</string>
     <string name="moje_rezervacije_da">Da</string>
     <string name="moje_rezervacjije_oprez">Oprez</string>
     <string name="obrisi_rezervaciju_uspjesno">Uspješno brisanje rezervacije!</string>
     <string name="obrisi_rezervaciju_neuspjesno">Neuspjesno brisanje rezervacije!</string>
</resources>
