<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/backgroundDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

   
        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/odabir_sjedala_txt_odaberi_sjedalo"
            android:textColor="@color/textWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/odabir_sjedala_odustani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odabir_sjedala_btn_odustani" />

            <Button
                android:id="@+id/odabir_sjedala_resetiraj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odabir_sjedala_btn_resetiraj" />

            <Button
                android:id="@+id/odabir_sjedala_prihvati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odabir_sjedala_btn_prihvati" />

        </LinearLayout>

   

</RelativeLayout>