<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#202020"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/projekcija_slikaFilma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/slika_filma"
        android:paddingTop="10dp"
        android:src="@drawable/film_ikona_predlozak" />

    <TextView
        android:id="@+id/projekcija_naslov_filma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tmp_naslov_filma"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffd5"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_lblTrajanje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/detalji_filma_lblTrajanje"
                android:textColor="#ffffffd5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projekcija_trajanje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/tmp_trajanje_filma"
                android:textColor="#ffffffd5"
                android:textStyle="normal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_lblZanr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/detalji_filma_lblZanr"
                android:textColor="#ffffffd5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projekcija_zanr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/tmp_zanr_filma"
                android:textColor="#ffffffd5" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_lblredatelj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/detalji_filma_lblRedatelj"
                android:textColor="#ffffffd5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projekcija_redatelj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/tmp_redatelj_filma"
                android:textColor="#ffffffd5" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_lblGlumci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/detalji_filma_lblGlumci"
                android:textColor="#ffffffd5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/projekcija_glumci"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:lines="2"
                android:maxLines="4"
                android:paddingLeft="5dp"
                android:text="@string/tmp_glumci_filma"
                android:textColor="#ffffffd5" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_dvorana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite" />

            <TextView
                android:id="@+id/projekcija_vrijeme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/projekcija_detalji_multipleks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueLight" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/projekcije_btnRezerviraj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rezervacije_rezerviraj" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/projekcija_lblDetalji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/detalji_filma_lblDetalji"
        android:textColor="#ffffffd5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/projekcija_detalji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#444242"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tmp_detalji_filma"
        android:textColor="#ffffffd5"
        android:textStyle="normal" />

</LinearLayout>
</ScrollView>
