<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/projekcija_slikaFilma"
        android:layout_width="116dp"
        android:layout_height="108dp"
        android:contentDescription="@string/slika_filma"
        android:paddingTop="10dp"
        android:src="@drawable/film_ikona_predlozak" />

    <TextView
        android:id="@+id/projekcija_naslov_filma"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/tmp_naslov_filma"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffd5"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#23b684"
            android:gravity="center"
            android:text="@string/grad_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffd5"
            android:typeface="sans" />

        <Spinner
            android:id="@+id/rezervacija_grad"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#23b6a3"
            android:entries="@array/lista_multipleksa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/detalji_filma_naslov"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#23b684"
            android:gravity="center"
            android:text="@string/lbl_vrijeme_projekcije"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffd5"
            android:typeface="sans" />

        <Spinner
            android:id="@+id/rezervacija_vrijeme_projekcije"
            style="@style/AppTheme"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#23b6a3"
            android:entries="@array/lista_multipleksa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="#23b684"
            android:gravity="center"
            android:text="@string/lbl_rezervirana_sjedala"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffd5"
            android:typeface="sans" />

        <TextView
            android:id="@+id/txt_rezervirane_ulaznice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rezervirana_sjedala"
            android:textColor="@color/textWhite"
            android:textColorHint="@color/textWhite" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_rezervacije_mapa_sjedala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mapa_sjedala" />

    <Button
        android:id="@+id/btn_rezervacija_rezerviraj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rezervacije_rezerviraj" />

</LinearLayout>