<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >

    <TextView
        android:id="@+id/registracija_lblKorisnickoIme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/prijava_korisnicko_ime"
        android:textColor="@color/textWhite" />

    <EditText
        android:id="@+id/dialog_registracija_txtKorisnickoIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registracija_lblKorisnickoIme"
        android:layout_below="@+id/registracija_lblKorisnickoIme"
        android:layout_marginRight="15dp"
        android:background="@color/textWhite"
        android:inputType="text"
        android:textColor="@color/backgroundDark"
        android:textColorHint="@color/greenDark" />

    <TextView
        android:id="@+id/registracija_lblLozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_registracija_txtKorisnickoIme"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/prijava_lozinka"
        android:textColor="@color/textWhite" />

    <EditText
        android:id="@+id/dialog_registracija_txtLozinka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registracija_lblLozinka"
        android:layout_below="@+id/registracija_lblLozinka"
        android:layout_marginRight="15dp"
        android:background="@color/textWhite"
        android:inputType="text|textPassword"
        android:textColor="@color/backgroundDark"
        android:textColorHint="@color/greenDark" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dialog_registracija_txtLozinka"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp" >

        <Button
            android:id="@+id/dialog_prijava_btnPrijaviSe"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:background="@color/greenDark"
            android:text="@string/prijava_prijavi_se"
            android:textColor="@color/textWhite" />

        <Button
            android:id="@+id/dijalog_prijava_btnOdustani"
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/greenLight"
            android:text="@string/prijava_odustani"
            android:textColor="@color/textWhite" />
    </LinearLayout>

    <TextView
        android:id="@+id/prijava_txtRegistrirajSe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/prijava_registriraj_se"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/prijava_btnRegistrirajSe"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_registracija_txtLozinka"
        android:layout_below="@+id/prijava_txtRegistrirajSe"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/prijava_registriracija" />

</RelativeLayout>